# alphaLAB

./: .env.example  .gitignore  README.md  pyproject.toml
data/input/: README.md
docs/: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  DATA_SOURCES.md  HANDOFF.md  PRD.md  ROADMAP.md  RUNBOOK.md  TARGET_PRICE_MODEL.md
scripts/: eval_p0_4_ground_truth.py  llm_smoke.py
src/biotech_alpha/: __init__.py  agent_runtime.py  agents.py  agents_llm.py  alerts.py  auto_inputs.py  china_cde.py  cli.py  clinicaltrials.py  company_report.py  competition.py  conference.py  financials.py  hkexnews.py  market_data.py  (+15 more)
tests/: test_agent_runtime.py  test_alerts.py  test_auto_inputs.py  test_catalyst_agent.py  test_china_cde.py  test_cli.py  test_clinicaltrials.py  test_company_report.py  test_competition.py  test_competition_triage_agent.py  test_conference.py  test_data_collector_agent.py  test_decision_debate_agent.py  test_financial_triage_agent.py  test_financials.py  test_hkexnews.py  test_llm_client.py  test_macro_context_agent.py  test_macro_signals_providers.py  test_market_data.py  test_market_data_providers.py  test_market_expectations_agent.py  test_market_regime_timing_agent.py  test_p0_4_ground_truth.py  test_pipeline.py  test_pipeline_triage_agent.py  test_position_action.py  test_report_synthesizer_agent.py  test_research.py  test_scientific_skeptic_agent.py  test_scorecard.py  test_skeptic.py  test_stage_a_agents.py  test_strategic_economics_agent.py  test_target_price.py  test_technical_features.py  test_valuation.py  test_watchlist.py  test_yfinance_provider.py
(+8 files in other folders)
