[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "biotech-alpha-lab"
version = "0.1.0"
description = "AI-assisted investment research workspace for innovative drug companies."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Jiabao" }
]
dependencies = [
  "anthropic>=0.49",
  "beautifulsoup4>=4.12",
  "openai>=1.40",
  "pypdf>=4.0",
  "requests>=2.31",
]

[project.optional-dependencies]
market = [
  "yfinance>=1.0",
]

[project.scripts]
biotech-alpha = "biotech_alpha.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
